Fixed navbar z-index problem

--- a/src/pages/home/components/about/about.component.scss
+++ b/src/pages/home/components/about/about.component.scss
@@ -12,14 +12,12 @@
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 0;
         background: linear-gradient(#000000, rgba(0, 0, 0, .25));
     }
 
     .title_about {
         color: $color_2 ;
         position: relative;
-        z-index: 1;
         text-align: center;
         font-family: $font_1;
         font-weight: 300;
@@ -28,7 +26,6 @@
 
     .descrip_about {
         position: relative;
-        z-index: 1;
         color: $color_3;
         text-align: center;
         margin-top: 20px;
@@ -38,7 +35,6 @@
 
     .cards_container {
         position: relative;
-        z-index: 1;
         display: grid;
         gap: 30px;
         margin-top: 30px;
