--- a/src/pages/home/components/banner/banner.component.scss
+++ b/src/pages/home/components/banner/banner.component.scss
@@ -42,7 +42,7 @@
         }
 
         .menu {
-            position: absolute;
+            position: fixed;
             left: 0;
             top: 0;
             background-color: $color_3;
